providers/azure/aks/profiles/cilium/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-breakfix-cilium
  labels:
    app.kubernetes.io/part-of: platform-breakfix
    platform-breakfix/profile: cilium
