providers/azure/aks/profiles/cilium/kubernetes/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-destination-ingress
  namespace: platform-breakfix-cilium
spec:
  podSelector:
    matchLabels:
      app: policy-destination
  policyTypes:
    - Ingress
